--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,9 +1,9 @@
-$regular   = 'MetricRegular'
-$bold      = 'MetricBold'
-$medium    = 'MetricSemiBold'
-$light     = 'MetricLight'
-$color   = #FDB913
-$default = #01a982
+$light     = 'FuturaLight'
+$regular   = 'FuturaRegular'
+$medium    = 'FuturaMedium'
+$bold      = 'FuturaBold'
+$color     = #149DCC
+$default   = #61CE70
 flexCenter()
 	display flex
 	display -webkit-flex
@@ -71,7 +71,7 @@ body
 	overflow-y scroll
 	font-family $regular
 	color #000000
-	background-color #EFEFEF
+	background-color #FFFFFF
 img
 	width 100%
 p
@@ -81,38 +81,100 @@ label
 	font-weight 100
 strong
 	font-family $medium
-.js-section
+.jm-section
 	position relative
 	padding 40px 20px
-.js-white
+.jm-white
 	background-color #FFFFFF
-.js-title
-	text-align center
-	font-size 32px
-	font-family $bold
-	margin 20px 0
-	&.white
-		color #FFFFFF
-	p
+.jm-grey
+	background-color #F1EFF2
+.jm-input
+	text-align left
+	margin 10px 0
+	label
+		font-size 20px
+		line-height 24px
 		font-family $medium
-		font-size 18px
-		line-height 20px
-	small
-		font-family $regular
-		font-size 16px
-		line-height 18px
-.js-flex
+	.form-control
+		font-size 20px
+		line-height 24px
+	textarea
+		resize none
+.jm-title
+	text-align center
+	margin 10px 0
+	position relative
+	h2
+		font-size 36px
+		line-height 40px
+		font-family $bold
+		color #000000
+		width 100%
+		max-width 250px
+		margin auto
+		background-color #FFFFFF
+	hr
+		position absolute 
+		top 20px
+		border 1.5px solid #000000
+		z-index -1
+		width 100%
+		margin 0
+.jm-flex
 	flexCenter()
 	justify-content center
-.js-flex--start
+.jm-flex--start
 	flexStart()
 	justify-content center
-.js-height
+.jm-height
 	height 100vh
-	.js-fondo
+	.jm-fondo
 		height 100vh
 		&:BEFORE
 			height 100vh
+.jm-relative
+	position relative
+/*NAVBAR*/
+.navbar-default
+	transitionAll()
+	border none
+	border-radius 0
+	position fixed
+	width 100%
+	z-index 999
+	margin 0
+	background-color #E6E7E8
+	top 0
+	&.navbarcolor
+		box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
+		-webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
+		-moz-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
+	&.navbar-grey
+		background-color #E6E7E8 !important
+		.navbar-nav
+			&>li
+				&>a
+					color #000000 !important
+		.navbar-brand
+			span 
+				color #000000 !important
+	.navbar-nav
+		&>li
+			&>a
+				color #000000
+				font-size 20px
+				text-align center
+				&:hover
+					color #FFFFFF
+	.navbar-brand
+		flexCenter()
+		color #000000
+		font-size 20px
+		font-family $bold
+		&>img
+			max-width 50px
+		span 
+			margin-left 15px
 .js-header
 	transitionAll()
 	position fixed
@@ -144,7 +206,7 @@ strong
 		width 100%
 		justify-content flex-end
 		text-align right
-.js-container
+.jm-container
 	transitionMaxWidth()
 	height 100%
 	width 100%
@@ -152,6 +214,8 @@ strong
 	margin auto
 .js-home
 	height 500px
+.jm-pulsera	
+	height 260px
 .js-input
 	padding 7px 20px
 	height 70px
@@ -258,21 +322,30 @@ strong
 		line-height 18px
 		font-family $regular
 		font-weight 100
-.js-button
+.jm-button
 	background-color $default !important
 	text-decoration none !important
+	text-transform none
 	font-size 16px
-	color #FFFFFF !important
-	border 2px solid $default
-	margin 10px
 	font-family $medium
-	width 100%
-	max-width 160px
-	&.js-button--default
+	color #FFFFFF !important
+	box-shadow none !important
+	&.jm-button--default
 		background-color transparent !important
 		border 2px solid #FFFFFF
-	&.js-login
+		width 100%
+		max-width 200px
+		margin-top 20px
+	&.jm-button--login
 		background-color $default !important
+		width 100%
+	&.jm-button--black
+		background-color transparent !important
+		border 2px solid #000000
+		color #000000 !important
+		width 100%
+		max-width 200px
+		margin-top 20px
 .mdl-radio__inner-circle
 	background #4983B6
 .mdl-checkbox
@@ -302,28 +375,67 @@ strong
 		font-weight 100
 	.mdl-checkbox__box-outline
 		border 2px solid #FFFFFF
-.js-fondo
+.jm-fondo
 	absolute()
-	background url(../img/fondo/fondo-home.jpg) no-repeat center center
-	background-size cover
+	background url(../img/fondo/fondo_home.jpg) no-repeat center center
+	background-size cover !important
 	width 100%
 	height 500px
 	z-index -1
+	&.time
+		background url(../img/fondo/fondo_time.jpg) no-repeat center center
+	&.about
+		background url(../img/fondo/fondo_about.JPG) no-repeat center center
+	&.story1
+		background url(../img/fondo/fondo_story1.JPG) no-repeat center center
+	&.story2
+		background url(../img/fondo/fondo_story2.JPG) no-repeat center center
+	&.pulsera
+		background url(../img/logo/benitan_pulsera.png) no-repeat center center
+		height 260px
+		&:BEFORE
+			height 260px
 	&:BEFORE
 		absolute()
 		content ''
 		background-color #000000
 		z-index 0
 		height 500px
-		opacity .3
+		opacity .2
 footer
-	background-color #000000
+	background-color #A7A9AC
 	color #FFFFFF
 	padding 20px
 	p
-		font-size 14px
-		line-height 18px			
+		font-size 16px
+		line-height 20px			
 /*CLASES PROYECTO*/
+.jm-autor
+	color #D14B3C
+	font-family $medium
+	margin-bottom 15px
+	padding 5px 20px
+.jm-contenido
+	padding 20px
+	text-align center
+	p
+		font-size 24px
+		line-height 30px
+		font-family $medium
+	img 
+		max-width 250px
+		margin-bottom 20px
+	span 
+		font-size 20px
+		line-height 24px
+		display block
+		margin-top 10px
+.jm-subtitle
+	text-align center
+	p
+		font-size 24px
+		line-height 30px
+		font-family $medium
 .js-contenido
 	text-align center
 	color #FFFFFF
@@ -338,6 +450,40 @@ footer
 		margin-bottom 10px
 	small
 		font-size 18px
+.collection
+	text-align center
+	max-width 300px
+	margin 20px auto
+	.mdl-button
+		text-align left
+		margin 20px 0
+		padding 0
+		.jm-dollar
+			display inline-block
+			height 100%
+			background-color #000000
+			color #FFFFFF
+			margin-right 30px
+			padding 0 8px
+	p
+		font-size 20px
+		line-height 24px
+.jm-grid-2
+	display grid
+	grid-template-columns repeat(auto-fit,minmax(200px,1fr))
+	grid-gap 10px
+.jm-grid-4
+	display grid
+	grid-template-columns repeat(auto-fit,minmax(200px,1fr))
+	grid-gap 50px
+	.jm-icon
+		width 100%
+		max-width 200px
+		margin auto
+		text-align center
+		p
+			font-size 20px
+			line-height 24px
 /*MATERIAL DESIGN*/
 .mdl-card
 .mdl-card__supporting-text
@@ -355,12 +501,37 @@ footer
 @media (min-width: 768px)
 	.navbar-default
 		background-color transparent
+		.navbar-nav
+			&>li
+				&>a
+					color #FFFFFF
+					font-size 16px
+		.navbar-brand
+			color #FFFFFF
+		&.navbarcolor
+			background-color #FFFFFF
+			.navbar-nav
+				&>li
+					&>a
+						color #000000
+			.navbar-brand
+				color #000000
 @media (max-width: 600px)
+	#home
+		margin-top 50px
+	.jm-fondo
+		background url(../img/fondo/fondo_responsive.jpeg) no-repeat center center
+	.js-home
+	.jm-fondo
+		&.time
+			height 250px
+			&:BEFORE
+				height 250px
 	.js-contenido
 		padding 20px
 		h2
-			font-size 38px
-			line-height 42px
+			font-size 28px
+			line-height 32px
 	.js-header
 		padding 5px 15px
 		.js-header--right
