--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -1,8 +1,9 @@
-$light     = 'MetricLight'
-$regular   = 'MetricRegular'
-$medium    = 'MetricSemiBold'
-$bold      = 'MetricBold'
-$color     = #415564
+$light     = 'FuturaLight'
+$regular   = 'FuturaRegular'
+$medium    = 'FuturaMedium'
+$bold      = 'FuturaBold'
+$color     = #149DCC
+$default   = #61CE70
 flexCenter()
 	display flex
 	display -webkit-flex
@@ -74,7 +75,7 @@ label
 		background-color $color
 	img
 		width 100%
-		max-width 200px
+		max-width 50px
 	.js-header--left
 		flexCenter()
 		width 100%
