--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -91,6 +91,8 @@ strong
 .jm-input
 	text-align left
 	margin 10px 0
+	&.text-right
+		text-align right !important
 	label
 		font-size 20px
 		line-height 24px
@@ -100,6 +102,9 @@ strong
 		line-height 24px
 	textarea
 		resize none
+	.mdl-button
+		width 100%
+		max-width 200px
 .jm-title
 	text-align center
 	margin 10px 0
@@ -143,14 +148,16 @@ strong
 	width 100%
 	z-index 999
 	margin 0
-	background-color #E6E7E8
+	background-color #FFFFFF
 	top 0
 	&.navbarcolor
 		box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
 		-webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
 		-moz-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
 	&.navbar-grey
-		background-color #E6E7E8 !important
+		box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
+		-webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
+		-moz-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
 		.navbar-nav
 			&>li
 				&>a
@@ -168,7 +175,7 @@ strong
 					color #FFFFFF
 	.navbar-brand
 		flexCenter()
-		color #000000
+		color #000000 !important
 		font-size 20px
 		font-family $bold
 		&>img
@@ -410,6 +417,18 @@ footer
 		font-size 16px
 		line-height 20px			
 /*CLASES PROYECTO*/
+.jm-redes
+	margin-top 20px
+	ul
+		padding 0
+		margin 0
+		li
+			list-style none
+			display inline-block
+			padding 5px 20px
+			a
+				i 
+					color #FFFFFF
 .jm-autor
 	color #D14B3C
 	font-family $medium
@@ -504,29 +523,25 @@ footer
 		.navbar-nav
 			&>li
 				&>a
-					color #FFFFFF
+					color #FFFFFF !important
 					font-size 16px
 		.navbar-brand
-			color #FFFFFF
+			color #FFFFFF !important
 		&.navbarcolor
 			background-color #FFFFFF
 			.navbar-nav
 				&>li
 					&>a
-						color #000000
+						color #000000 !important
 			.navbar-brand
-				color #000000
+				color #000000 !important
 @media (max-width: 600px)
 	#home
 		margin-top 50px
 	.jm-fondo
 		background url(../img/fondo/fondo_responsive.jpeg) no-repeat center center
-	.js-home
-	.jm-fondo
 		&.time
-			height 250px
-			&:BEFORE
-				height 250px
+			background-position left
 	.js-contenido
 		padding 20px
 		h2
