--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -505,6 +505,14 @@ footer
 		p
 			font-size 20px
 			line-height 24px
+.jm-tabs
+	&>li
+		&>a
+			color #818181
+		&.active
+			&>a
+				color #000000
+				font-family $medium
 /*MATERIAL DESIGN*/
 .mdl-card
 .mdl-card__supporting-text
