cambio de imagen

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -398,7 +398,7 @@ strong
 	&.story2
 		background url(../img/fondo/fondo_story2.JPG) no-repeat center center
 	&.pulsera
-		background url(../img/logo/benitan_pulsera.png) no-repeat center center
+		background url(../img/logo/benitan_pulsera.jpg) no-repeat center center
 		height 260px
 		&:BEFORE
 			height 260px
