--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -394,9 +394,9 @@ strong
 	&.about
 		background url(../img/fondo/fondo_about.JPG) no-repeat center center
 	&.story1
-		background url(../img/fondo/fondo_story1.JPG) no-repeat center center
+		background url(../img/fondo/fondo_story1.JPG) no-repeat top center
 	&.story2
-		background url(../img/fondo/fondo_story2.JPG) no-repeat center center
+		background url(../img/fondo/fondo_story2.JPG) no-repeat bottom center
 	&.pulsera
 		background url(../img/logo/benitan_pulsera.jpg) no-repeat center center
 		height 260px
