--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -81,6 +81,7 @@ label
 	font-weight 100
 strong
 	font-family $medium
+	font-weight 100
 .jm-section
 	position relative
 	padding 40px 20px
@@ -129,6 +130,8 @@ strong
 .jm-flex
 	flexCenter()
 	justify-content center
+	&.start
+		justify-content flex-start
 .jm-flex--start
 	flexStart()
 	justify-content center
@@ -353,6 +356,16 @@ strong
 		width 100%
 		max-width 200px
 		margin-top 20px
+	&.jm-button--white
+		background-color transparent !important
+		border 1px solid #ffffff
+		height 30px
+		line-height normal
+		border-radius 25px
+		font-size 14px
+		padding 0 10px
+		width 100%
+		max-width 120px
 .mdl-radio__inner-circle
 	background #4983B6
 .mdl-checkbox
@@ -384,7 +397,7 @@ strong
 		border 2px solid #FFFFFF
 .jm-fondo
 	absolute()
-	background url(../img/fondo/fondo_home.jpg) no-repeat center center
+	background url(../img/fondo/fondo_home.png) no-repeat center center
 	background-size cover !important
 	width 100%
 	height 500px
@@ -405,32 +418,11 @@ strong
 	&:BEFORE
 		absolute()
 		content ''
-		background-color #000000
 		z-index 0
-		height 500px
-		opacity .2
-footer
-	background-color #A7A9AC
-	color #FFFFFF
-	padding 20px
-	p
-		font-size 16px
-		line-height 20px			
+		height 500px		
 /*CLASES PROYECTO*/
 .table-responsive
 	border none
-.jm-redes
-	margin-top 20px
-	ul
-		padding 0
-		margin 0
-		li
-			list-style none
-			display inline-block
-			padding 5px 20px
-			a
-				i 
-					color #FFFFFF
 .jm-autor
 	color #D14B3C
 	font-family $medium
@@ -453,9 +445,14 @@ footer
 		margin-top 10px
 .jm-subtitle
 	text-align center
+	width 100%
+	max-width 750px
+	margin 40px auto
 	p
-		font-size 24px
-		line-height 30px
+		font-size 30px
+		line-height normal
+		font-family $light
+	strong
 		font-family $medium
 .js-contenido
 	text-align center
@@ -465,12 +462,20 @@ footer
 		font-size 60px
 		line-height 60px
 		font-family $medium
+	h3
+		font-size 60px
+		line-height normal
+		font-family $light
+		strong 
+			font-family $medium
 	p
 		font-size 32px
 		line-height 34px
 		margin-bottom 10px
 	small
 		font-size 18px
+.jm-iconos
+	margin 40px 0
 .collection
 	text-align center
 	max-width 300px
@@ -489,22 +494,58 @@ footer
 	p
 		font-size 20px
 		line-height 24px
+.jm-news
+	height 360px
+	position relative
+	.jm-img
+		img 
+			object-fit cover
+			height 360px
+	.jm-new__contenido
+		flexCenter()
+		position absolute
+		bottom 0
+		background-color rgba(0, 0, 0, .4)
+		justify-content space-between
+		padding 0 12px
+		height 80px
+		h2
+			color #FFFFFF
+			font-size 25px
+			line-height normal
+			margin 10px 0
+			border-left 4px solid #ffffff
+			padding-left 12px
+			height 60px
+			overflow hidden
 .jm-grid-2
 	display grid
 	grid-template-columns repeat(auto-fit,minmax(200px,1fr))
 	grid-gap 10px
+.jm-grid-3
+	display grid
+	grid-template-columns repeat(auto-fit,minmax(360px,1fr))
+	grid-gap 10px
 .jm-grid-4
 	display grid
-	grid-template-columns repeat(auto-fit,minmax(200px,1fr))
+	grid-template-columns repeat(auto-fit,minmax(240px,1fr))
 	grid-gap 50px
 	.jm-icon
 		width 100%
-		max-width 200px
+		max-width 240px
 		margin auto
 		text-align center
+		.jm-img
+			flexCenter()
+			width 150px
+			height 150px
+			margin 30px auto
+			border 1px solid #000000
+			border-radius 50%
+			padding 40px
 		p
 			font-size 20px
-			line-height 24px
+			line-height normal
 .jm-tabs
 	&>li
 		&>a
@@ -513,6 +554,50 @@ footer
 			&>a
 				color #000000
 				font-family $medium
+footer
+	position relative
+	background-image url('../img/fondo/fondo_footer.png')
+	color #FFFFFF
+	height 420px
+	padding 20px
+	.jm-footer
+		height 100%
+		.jm-flex--end
+			flexEnd()
+			justify-content space-between
+			height 100%
+			border-bottom 1px solid #ffffff
+			padding 15px
+		p
+			font-size 16px
+			line-height 20px
+		.jm-privacidad
+			ul
+				padding 0
+				margin 0
+				li
+					list-style none
+					display inline-block
+					padding 5px 20px
+					a
+						color #ffffff
+						text-decoration none
+						font-size 16px
+		.jm-redes
+			margin-top 20px
+			ul
+				padding 0
+				margin 0
+				li
+					list-style none
+					display inline-block
+					padding 5px 20px
+					a
+						i 
+							color #B9B9B9
+		.jm-copyright
+			padding 20px
+			text-align center
 /*MATERIAL DESIGN*/
 .mdl-card
 .mdl-card__supporting-text
@@ -549,7 +634,7 @@ footer
 	#home
 		margin-top 50px
 	.jm-fondo
-		background url(../img/fondo/fondo_responsive.jpeg) no-repeat center center
+		background-position left center
 		&.time
 			background-position left
 	.js-contenido
@@ -569,4 +654,14 @@ footer
 	.dataTables_info
 	.dataTables_paginate
 		margin 20px 0 !important
+	.jm-grid-3
+		grid-template-columns repeat(auto-fit,minmax(300px,1fr))
+	.jm-news
+		height 300px
+		.jm-img
+			img
+				height 300px
+		.jm-new__contenido
+			h2
+				font-size 20px
 			
