--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -88,7 +88,7 @@ strong
 .jm-white
 	background-color #FFFFFF
 .jm-grey
-	background-color #F1EFF2
+	background-color #F8F8F8
 .jm-input
 	text-align left
 	margin 10px 0
@@ -112,21 +112,10 @@ strong
 	margin 10px 0
 	position relative
 	h2
-		font-size 36px
-		line-height 40px
+		font-size 60px
+		line-height normal
 		font-family $bold
 		color #000000
-		width 100%
-		max-width 250px
-		margin auto
-		background-color #FFFFFF
-	hr
-		position absolute 
-		top 20px
-		border 1.5px solid #000000
-		z-index -1
-		width 100%
-		margin 0
 .jm-flex
 	flexCenter()
 	justify-content center
