--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -181,7 +181,7 @@ strong
 		&>img
 			max-width 40px
 		span 
-			margin-left 15px
+			margin-left 5px
 			font-size 24px
 .js-header
 	transitionAll()
@@ -363,6 +363,7 @@ strong
 		width 100%
 		max-width 200px
 		margin-top 20px
+		padding 5px 20px
 	&.jm-button--white
 		background-color transparent !important
 		color #FFFFFF !important
@@ -587,11 +588,11 @@ strong
 		line-height 28px
 		font-family $light
 .jm-action
-	margin 20px 0
+	margin 30px 0
 footer
 	position relative
-	background-image url('../img/fondo/fondo_footer.png')
-	background-repeat no-repeat
+	background url('../img/fondo/fondo_footer.png') no-repeat
+	background-size cover
 	color #FFFFFF
 	height 420px
 	padding 0
