--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -119,7 +119,7 @@ strong
 	background-color #F8F8F8
 .jm-grey--oscure
 	background-color #333333
-.jm-input
+.m-input
 	text-align left
 	margin 10px 0
 	&.text-right
@@ -133,6 +133,7 @@ strong
 		line-height 24px
 	textarea
 		resize none
+		height 100%
 	.mdl-button
 		width 100%
 		max-width 200px
@@ -614,6 +615,8 @@ strong
 		font-size 24px
 		line-height 28px
 		font-family $light
+	.jm-contenido
+		margin auto
 .jm-action
 	margin 30px 0
 footer
