--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -125,12 +125,17 @@ strong
 	&.text-right
 		text-align right !important
 	label
-		font-size 20px
+		font-size 14px
 		line-height 24px
-		font-family $medium
+		font-family $regular
+		color #000000
+		&.active
+			color #CC3B3B
+			font-family $medium
 	.form-control
-		font-size 20px
+		font-size 16px
 		line-height 24px
+		font-family $light
 	textarea
 		resize none
 		height 100%
@@ -521,6 +526,8 @@ strong
 	height 360px
 	position relative
 	.jm-img
+		iframe
+			width 100%
 		img 
 			object-fit cover
 			height 360px
@@ -528,19 +535,26 @@ strong
 		flexCenter()
 		position absolute
 		bottom 0
+		left 0
+		right 0
+		width 100%
 		background-color rgba(0, 0, 0, .4)
 		justify-content space-between
 		padding 0 12px
-		height 80px
+		height 65px
 		h2
+			flexCenter()
 			color #FFFFFF
-			font-size 25px
+			font-size 20px
 			line-height normal
 			margin 10px 0
 			border-left 4px solid #ffffff
 			padding-left 12px
-			height 60px
+			height 55px
 			overflow hidden
+		a
+			flexCenter()
+			justify-content center
 .jm-grid--collection
 	display grid
 	grid-template-columns repeat(auto-fit,minmax(300px,350px))
@@ -886,10 +900,11 @@ footer
 	.jm-grid-3
 		grid-template-columns repeat(auto-fit,minmax(300px,1fr))
 	.jm-news
-		height 300px
+		height 250px
 		.jm-img
+			iframe
 			img
-				height 300px
+				height 250px
 		.jm-new__contenido
 			h2
 				font-size 20px
