--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -581,15 +581,70 @@ strong
 			flexCenter()
 			width 150px
 			height 150px
-			margin 30px auto
-			border 1px solid #000000
+			margin 20px auto
 			border-radius 50%
-			padding 40px
+			padding 20px
 		p
 			font-size 20px
 			line-height normal
+			strong
+				display block
+.jm-collection__features
+	flexStart()
+	justify-content center
+	grid-gap 25px
+	margin-top 30px
+	.jm-feature
+		text-align center
+		width 100%
+		max-width 75px
+		flexCenter()
+		flex-direction column
+		justify-content center
+		.jm-feature__icon
+			width 100%
+			max-width 60px
+			border 3px solid #000000
+			border-radius 50%
+			height 60px
+			flexCenter()
+			justify-content center
+			margin-bottom 10px
+			position relative
+			overflow hidden
+			img
+				max-width 35px
+			hr
+				display block
+				margin 0
+				padding 0
+				content ''
+				background-color #000000
+				height 60px
+				width 4px
+				position absolute
+				left 0
+				right 0
+				margin auto
+				-webkit-transform rotate(45deg)
+				-moz-transform rotate(45deg)
+				-ms-transform rotate(45deg)
+				-o-transform rotate(45deg)
+				transform rotate(45deg)
+		p
+			font-size 13px
+			font-family $medium
+			line-height normal
 .jm-collection
 	text-align center
+	padding 20px 0
+	img
+		max-width 320px
+		height 250px
+		object-fit cover
+	span
+		display block
+		font-size 16px
 	h2
 	p
 		color #000000
@@ -676,6 +731,7 @@ footer
 						color #ffffff
 						text-decoration none
 						font-size 16px
+						cursor pointer
 		.jm-redes
 			margin-top 20px
 			ul
@@ -845,6 +901,82 @@ footer
 			position absolute
 			top 10px
 			right 10px
+	&.modal-fullwidth
+		padding 0 !important
+		.modal-dialog
+			width 100%
+			margin 0
+			.modal-content
+				border-radius 0
+				.modal-header
+					border none
+				.modal-body
+					width 100%
+					max-width 900px
+					margin auto
+					padding-bottom 0
+					small
+						font-size 14px
+						font-family $medium
+						display block
+						margin-bottom 20px
+					p
+						font-size 14px
+						line-height 20px
+						margin-bottom 15px
+					ul
+						list-style none
+						margin 0
+						li
+							margin-bottom 15px
+						&.margin-none
+							li
+								margin 0
+					strong
+						display block
+						margin-bottom 20px
+						font-family $bold
+				.modal-footer
+					border none
+					padding 10px 0 25px 0
+					button
+						background-color #000000 !important
+						color #FFFFFF !important
+						height 36px !important
+						font-size 16px
+				.modal-menu
+					flexCenter()
+					justify-content center
+					top 0
+					right 0
+					background-color #000000
+					width 30px
+					height 30px
+					i
+						color #FFFFFF
+						font-size 22px
+.m-loading
+	display none
+	align-items center
+	justify-content center
+	position fixed
+	top 0
+	left 0
+	right 0
+	bottom 0
+	z-index 99999
+	background-color rgba(255,255,255,0.85)
+	width 100%
+	height 100%
+	&.active
+		display flex
+		display -webkit-flex
+	.mdl-spinner--single-color
+		.mdl-spinner__layer-1
+		.mdl-spinner__layer-2
+		.mdl-spinner__layer-3
+		.mdl-spinner__layer-4
+			border-color #000000
 /*SCROLL*/
 ::-webkit-scrollbar
 	width 5px
@@ -951,3 +1083,24 @@ footer
 			line-height 48px
 	.jm-title--story
 		margin 10px auto
+	footer
+		.jm-footer
+			.jm-flex--end
+				border none
+			.jm-privacidad
+				ul
+					li
+						padding 10px 0
+						display block
+			.jm-copyright
+				text-align left
+				padding-top 0
+			.jm-traduccion
+				padding 20px
+	.modal
+		&.modal-fullwidth
+			.modal-dialog
+				.modal-content
+					.modal-header
+						h2
+							font-size 22px
